# Rodtep

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
rodtep_claim_management/: hooks.py  modules.txt  patches.txt
rodtep_claim_management/config/: desktop.py  docs.py
rodtep_claim_management/fixtures/: custom_field.json
rodtep_claim_management/public/js/: sales_invoice.js
rodtep_claim_management/rodtep_claim_management/: api.py
rodtep_claim_management/rodtep_claim_management/custom/: company.json  item.json  item_barcode.json  journal_entry.json  journal_entry_account.json  sales_invoice_item.json
rodtep_claim_management/rodtep_claim_management/doc_events/: sales_invoice.py
rodtep_claim_management/rodtep_claim_management/doctype/duty_drawback_claim/: duty_drawback_claim.js  duty_drawback_claim.py
rodtep_claim_management/rodtep_claim_management/doctype/rodtep_claim/: rodtep_claim.py
