[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rodtep_claim_management"
description = "Rodtep Claim Management"
authors = [
    { name = "FinByz", email = "info@finbyz.com" },
]
license = { text = "MIT" }
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "rodtep_claim_management.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["rodtep_claim_management*"]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
